--- a/privacy.html
+++ b/privacy.html
@@ -19,6 +19,6 @@
   <p>Les données sont utilisées uniquement pour fournir les services de l’application et ne sont partagées avec aucun tiers, sauf avec les services de Firebase nécessaires à son fonctionnement.</p>
 
   <h2>Contact</h2>
-  <p>Pour toute question, vous pouvez nous contacter à : <a href="mailto:tonmail@gmail.com">tonmail@gmail.com</a></p>
+  <p>Pour toute question, vous pouvez nous contacter à : <a href="mailto:contact@roomrenting.com">contact@roomrenting.com</a></p>
 </body>
 </html>
